Update 3. Javascript Versions.md

--- a/I - Introduction-to-Javascript /3. Javascript Versions.md
+++ b/I - Introduction-to-Javascript /3. Javascript Versions.md
@@ -1,28 +1,56 @@
-# Javascript Versions
+# 🌟 **JavaScript Versions**
 
 The core language of **JavaScript** is standardized by the [**ECMA TC39**](https://github.com/tc39) committee as a language named **ECMAScript**. While "ECMAScript" refers to the language standard, the terms "ECMAScript" and "JavaScript" can be used interchangeably. This core language is also utilized in non-browser environments, such as [**Node.js**](https://nodejs.org/).
 
+---
+
+## 📚 **Key Aspects of ECMAScript**
+
 **ECMAScript** defines several critical aspects of the language, including:
-- **Language syntax**: Parsing rules, keywords, control flow, object literal initialization, etc.
-- **Error handling mechanisms**: Features like `throw`, `try...catch`, and the ability to create user-defined `Error` types.
-- **Types**: Data types such as boolean, number, string, function, object, etc.
-- **Prototype-based inheritance mechanism**
-- **Built-in objects and functions**: Including JSON, Math, Array methods, `parseInt`, `decodeURI`, and more.
-- **Strict mode**: Learn more about [**Strict Mode**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode).
-- **Module system**
-- **Basic memory model**
+
+- **📝 Language syntax**: Parsing rules, keywords, control flow, object literal initialization, etc.
+- **⚠️ Error handling mechanisms**: Features like `throw`, `try...catch`, and the ability to create user-defined `Error` types.
+- **🔢 Types**: Data types such as boolean, number, string, function, object, etc.
+- **🔗 Prototype-based inheritance mechanism**
+- **🛠️ Built-in objects and functions**: Including JSON, Math, Array methods, `parseInt`, `decodeURI`, and more.
+- **🚨 Strict mode**: Learn more about [**Strict Mode**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode).
+- **📦 Module system**
+- **💾 Basic memory model**
+
+---
+
+## 📅 **ECMAScript Editions**
 
 **ECMAScript editions** are published as a standard annually by the [**ECMA General Assembly**](https://tc39.es/ecma262/). The development is conducted publicly via the [**Ecma TC39 GitHub organization**](https://github.com/tc39), where proposals, official specification text, and meeting notes are hosted.
 
-Before the 6th edition (known as **ES6** or **ECMAScript 2015**), specifications were published sporadically and identified by major version numbers like ES3 or ES5. Post-ES6, the naming convention shifted to the publication year—e.g., ES2017, ES2018, etc. **ESNext** is a dynamic term referring to the next version of the standard, though features under ESNext are technically called proposals. These proposals are typically implemented in JavaScript engines once they reach [**Stage 3 or 4**](https://tc39.es/process-document/) and are then available for public use.
+---
+
+### 🕒 **Before ES6:**
+
+Before the 6th edition (known as **ES6** or **ECMAScript 2015**), specifications were published sporadically and identified by major version numbers like ES3 or ES5. 
+
+### 🕔 **After ES6:**
+
+Post-ES6, the naming convention shifted to the publication year—e.g., ES2017, ES2018, etc. **ESNext** is a dynamic term referring to the next version of the standard, though features under ESNext are technically called proposals. These proposals are typically implemented in JavaScript engines once they reach [**Stage 3 or 4**](https://tc39.es/process-document/) and are then available for public use.
 
 The current committee-approved snapshot of [**ECMA-262**](https://tc39.es/ecma262/) is accessible in PDF and HTML formats on the **Ecma International** website. The specifications **ECMA-262** and **ECMA-402** are continuously maintained by the editors, with the latest versions available on the [**TC39 website**](https://tc39.es/).
 
+---
+
+## 🛠️ **New Language Features & Proposals**
+
 **New language features**, including syntaxes, APIs, and revisions to existing behaviors, are discussed as [**proposals**](https://tc39.es/ecma262/) within TC39. These proposals progress through a four-stage process, typically reaching implementation in JavaScript engines at Stage 3 or Stage 4.
+
+---
+
+## 🎉 **Major ECMAScript Versions**
 
 Since 2015, **major ECMAScript versions** have been released annually each June. The latest edition, [**ECMAScript 2024**](https://tc39.es/ecma262/), was released in June 2024, marking the 15th edition. 
 
-Notable past editions include:
+---
+
+### 📜 **Notable Past Editions**:
+
 - **ECMAScript 1 (June 1997)**: The first edition.
 - **ECMAScript 2 (June 1998)**: A minor update to align with the ISO standard.
 - **ECMAScript 3 (December 1999)**: Introduced regular expressions, enhanced string handling, and new control structures like `do-while` and `switch`.
@@ -32,6 +60,10 @@ Notable past editions include:
 - **ECMAScript 2016 (June 2016)**: Introduced a yearly release cycle and added the exponentiation operator and `Array.includes()`.
 - **ECMAScript 2017 (June 2017)**: Introduced async functions, shared memory, and other enhancements.
 
+---
+
 Each year, **ECMAScript** evolves through contributions from a vibrant community and the collaboration of member companies like Adobe, Apple, Google, Microsoft, and Mozilla, among others. These companies work together through the [**TC39 committee**](https://github.com/tc39), which meets bi-monthly. The minutes of these meetings are publicly available on [**GitHub**](https://github.com/tc39/notes).
 
 For more detailed information on past and current ECMAScript features, visit the [**ECMAScript GitHub repository**](https://github.com/tc39/ecma262).
+
+---
