Update 4. How to run Javascript.md

--- a/I - Introduction-to-Javascript /4. How to run Javascript.md
+++ b/I - Introduction-to-Javascript /4. How to run Javascript.md
@@ -1,4 +1,4 @@
-# How to Run Javascript ?
+# How to Run Javascript
 
 JavaScript can be executed in several environments, each with its own setup and advantages. This chapter will walk you through how to run JavaScript in the command line, browser, and other useful environments.
 
