Update 2. History of Javascript.md

--- a/I - Introduction-to-Javascript /2. History of Javascript.md
+++ b/I - Introduction-to-Javascript /2. History of Javascript.md
@@ -10,8 +10,8 @@ JavaScript was created to add **dynamic** and **interactive** elements to static
 
 - **Rapid Growth:** JavaScript's popularity soared as it powered web applications like online games, dynamic menus, and form validation.
 - **Major Updates:** The language has seen significant improvements, notably with:
-  - [**ECMAScript 5**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects) in **2009**.
-  - [**ECMAScript 6**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects) in **2015**, which introduced:
+  - [**ECMAScript 5**](https://fr.wikipedia.org/wiki/ECMAScript) in **2009**.
+  - [**ECMAScript 6**](https://fr.wikipedia.org/wiki/ECMAScript) in **2015**, which introduced:
     - Block-scoped variables (`let` and `const`)
     - [**Arrow functions**](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions).
 
@@ -26,10 +26,10 @@ Today, JavaScript is:
 
 ## 🔄 The Renaissance of JavaScript
 
-JavaScript stagnated during **Internet Explorer's** dominance in the early 2000s. However, it experienced a **renaissance** with the introduction of [**Ajax**](https://developer.mozilla.org/en-US/docs/Web/Guide/AJAX) in **2005**, enabling dynamic content loading without full page reloads. This innovation sparked the creation of numerous **JavaScript libraries** and **frameworks**.
+JavaScript stagnated during **Internet Explorer's** dominance in the early 2000s. However, it experienced a **renaissance** with the introduction of [**Ajax**](https://fr.wikipedia.org/wiki/Ajax_(informatique)) in **2005**, enabling dynamic content loading without full page reloads. This innovation sparked the creation of numerous **JavaScript libraries** and **frameworks**.
 
 ## 🚀 The Node.js Revolution
 
-In **2009**, the creation of [**Node.js**](https://nodejs.org/en/) extended JavaScript's reach beyond browsers, enabling it to power [**server-side applications**](https://nodejs.org/en/). This breakthrough led to the **explosion of JavaScript's ecosystem**, which now includes a vast array of tools, libraries, and frameworks, making it **central to modern web development**.
+In **2009**, the creation of [**Node.js**](https://nodejs.org/en/) extended JavaScript's reach beyond browsers, enabling it to power **server-side applications**. This breakthrough led to the **explosion of JavaScript's ecosystem**, which now includes a vast array of tools, libraries, and frameworks, making it **central to modern web development**.
 
 > **JavaScript** continues to evolve with regular updates and a large, active developer community driving its growth.
